[package]
name = "devcon-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server and REST API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# SSE support
tokio-stream = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# System libraries
libc = { workspace = true }

# Netlink support for port discovery
netlink-packet-core = { workspace = true }
netlink-packet-sock-diag = { workspace = true }
netlink-sys = { workspace = true }
